Version 0.194 "Manual Labour"

debuginfod-find: Fixed caching bug preventing user-cancelled downloads
                 from being re-downloaded at a later time.

elfclassify: New options --has-debug-sections and --any-ar-member.

elflint: Presence of vendor- and application-specific ELF note types no
         longer triggers compliance errors.

libdwfl_stacktrace: New function dwflst_sample_getframes.  The
                    libdwfl_stacktrace library interface is experimental
                    and may be subject to API/ABI changes.

libelf: Manual pages have been added for many libelf library functions.
        Additional manual pages are planned for future releases.

readelf: Up to 13% faster when using the -N option.

Version 0.193 "Bugs erased, stacks traced"

debuginfod: Add CORS (webapp access) support to webapi and --cors option.

	    Add --listen-address option for binding the HTTP listen socket
	    to a specific IPv4 or IPv6 address.

	    debuginfod client now caches x-debuginfod-* HTTP headers
	    alongside downloaded files.

libdw: Add dwarf_language and dwarf_language_lower_bound functions.

       Improved support for DWARF6 language metadata as well as DWARF
       language constants for Nim, Dylan, Algol68, V and Mojo.

       dwarf_srclang is now forward-compatible with DWARF6 language
       constants.

libdwfl_stacktrace: Experimental new library interface for unwinding
		    stack samples into call chains, and tracking and
		    caching Elf data for multiple processes, building
		    on libdwfl.  Initially supports perf_events stack
		    sample data.

libelf: elf_scnshndx has been rewritten to be more robust, particularily
        for ELF files with more than 64K sections.

readelf: Improved handling of corrupt ELF data.

	 --section-headers output now includes a "Key to Flags" explaining
	 section flag meanings.

Version 0.192 "New rules, faster tools"

CONDUCT: A new code of conduct has been adopted.  See the